unpackaged/main/default/objects/breadwinner_ns__BW_Subsidiary__c/breadwinner_ns__BW_Subsidiary__c.object-meta.xml
<CustomObject>
    <label>NetSuite Subsidiary</label>
    <nameField>
        <label>Subsidiary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NetSuite Subsidiaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>