unpackaged/main/default/objects/breadwinner_ns__BW_Subsidiary__c/fields/breadwinner_ns__Complete_Hierarchy_Name__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Complete_Hierarchy_Name__c</fullName>
    <label>Complete Hierarchy Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>