unpackaged/main/default/objects/breadwinner_ns__BW_Subsidiary__c/fields/breadwinner_ns__Edition__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Edition__c</fullName>
    <label>Edition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>