unpackaged/main/default/objects/breadwinner_ns__BW_Subsidiary__c/fields/breadwinner_ns__Expense_Category_Response__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Expense_Category_Response__c</fullName>
    <label>Expense Category Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>