unpackaged/main/default/objects/breadwinner_ns__BW_Subsidiary__c/fields/breadwinner_ns__Historical_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Historical_Sync_Status__c</fullName>
    <label>Historical Sync Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>