unpackaged/main/default/objects/breadwinner_ns__BW_Subsidiary__c/fields/breadwinner_ns__IsElimination__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__IsElimination__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsElimination</label>
    <type>Checkbox</type>
</CustomField>