unpackaged/main/default/objects/breadwinner_ns__BW_Subsidiary__c/fields/breadwinner_ns__SF_Account_Configuration__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__SF_Account_Configuration__c</fullName>
    <label>SF Account Configuration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>