unpackaged/main/default/objects/breadwinner_ns__BW_Subsidiary__c/listViews/breadwinner_ns__All.listView-meta.xml
<ListView>
    <fullName>breadwinner_ns__All</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_ns__IsInactive__c</columns>
    <columns>breadwinner_ns__LegalName__c</columns>
    <columns>breadwinner_ns__Parent__c</columns>
    <columns>breadwinner_ns__IsElimination__c</columns>
    <columns>breadwinner_ns__CurrencyName__c</columns>
    <columns>breadwinner_ns__State__c</columns>
    <columns>breadwinner_ns__Country__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>